--- a/developer.html
+++ b/developer.html
@@ -2,3 +2,7 @@ this is a demo
 im watching master
 <h>bhavani is evil</h>
 <h>tomorrow is monday</h>
+anirudh is MD
+today is sunday 
+good evening
+watch the movie
